force-app/main/default/objects/QuoteLineItem/fields/fmlDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>fmlDiscountAmount__c</fullName>
    <formula>Discount  *  UnitPrice  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rabattbetrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>