force-app/main/default/objects/QuoteLineItem/validationRules/Menge.validationRule-meta.xml
<ValidationRule>
    <fullName>Menge</fullName>
    <active>false</active>
    <description>Quantity always needs to be at least 1.</description>
    <errorConditionFormula>Quantity &lt;1</errorConditionFormula>
    <errorMessage>Quantity always needs to be at least 1.</errorMessage>
</ValidationRule>