force-app/main/default/objects/QuoteLineItem/validationRules/Performance_Guarantee_Product_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>Performance_Guarantee_Product_Usage</fullName>
    <active>true</active>
    <description>Performance Guarantee Product is restricted for AM</description>
    <errorConditionFormula>Product2Id = &quot;01t1v00000EIrJ3&quot;
&amp;&amp;
OR($Profile.Id = &quot;00e1v000001nNmB&quot;,
   $Profile.Id = &quot;00e0Y000000Ng1o&quot;)</errorConditionFormula>
    <errorMessage>You can&apos;t choose the Product &apos;Performance Guarantee&apos;. It&apos;s restricted for Account Management :P</errorMessage>
</ValidationRule>